--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="main">
-		<img src="./image-qr-code.png" alt="QR code">
+		<img src="https://github.com/pjortega0225/challenges/blob/main/image-qr-code.png?raw=true" alt="QR code">
 		<h1>Improve your front-end<br>
 		skills by building projects
 		</h1>
